--- a/phim.html
+++ b/phim.html
@@ -39,7 +39,7 @@
                     <i class="fa-solid fa-magnifying-glass"></i>   
                 </div>
                 <div class="bongngo">
-                    <img src="img/bong-ngo.png" alt="bỏng ngô">
+                    <img src="img/bong-ng.png" alt="bỏng ngô">
                     <img src="img/so-da.png" alt="soda">
                 </div>
                 <div class="button">
