--- a/phim.html
+++ b/phim.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="img/icon-sap-chieu.png">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width:600px)">
 </head>
 <body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
