--- a/phim.html
+++ b/phim.html
@@ -40,8 +40,47 @@
                     <i class="fa-solid fa-magnifying-glass"></i>   
                 </div>
                 <div class="bongngo">
-                    <img src="img/bong-ngo.png" alt="bỏng ngô">
-                    <img src="img/so-da.png" alt="soda">
+                    <img src="img/bong-ngo.png" alt="bỏng ngô" id="food">
+                    <img src="img/so-da.png" alt="soda" id="drink">
+                    <div class="food-drink flex">
+                        <div class="food-drink-form flex">
+                            <div class="flex">
+                                <h2>FOODS && DRINKS</h2>
+                                <span id="food-close">x Đóng</span>
+                            </div>
+                            <div class="flex">
+                                <img src="img/bong-ngo.png" alt="">
+                                <select name="" id="">
+                                    <option value="">Bỏng ngô</option>
+                                    <option value="">Size nhỏ - 50.000đ</option>
+                                    <option value="">Size vừa - 60.000đ</option>
+                                    <option value="">Size lớn - 70.000đ</option>
+                                </select>
+                            </div>
+                            <div class="flex">
+                                <img src="img/so-da.png" alt="">
+                                <select name="" id="">
+                                    <option value="">Soda</option>
+                                    <option value="">Size nhỏ - 50.000đ</option>
+                                    <option value="">Size vừa - 60.000đ</option>
+                                    <option value="">Size lớn - 70.000đ</option>
+                                </select>
+                            </div>
+                            <div class="flex">
+                                <img src="img/bong-ngo.png" alt="">
+                                <img src="img/so-da.png" alt="">
+                                <select name="" id="">
+                                    <option value="">Combo bỏng ngô + soda</option>
+                                    <option value="">Combo 1-100.000đ</option>
+                                    <option value="">Combo 2-150.000đ</option>
+                                    <option value="">Combo 3-200.000đ</option>
+                                    <option value="">Combo tùy chọn</option>
+                                </select>
+                            </div>
+                            <button id="food-xacnhan">Xác nhận</button>
+                            <p>Vui lòng nhận phiếu và nhận trực tiếp tại quầy</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="button">
                     <button id="sign">ĐĂNG KÍ</button>
@@ -163,7 +202,7 @@
             <div class="movi">
                 <img src="img/470x700-5-poster.png" alt="">
                 <div class="chitiet flex animate__animated animate__flipInY">
-                    <div>
+                    <div class="chitiet1">
                         <p><strong>Thời gian</strong>:103 Phút</p>
                         <p><strong>Thể loại</strong>:Hành động</p>
                         <p><strong>Định dạng</strong>: 2D</p>
