--- a/datve.html
+++ b/datve.html
@@ -157,7 +157,7 @@
                     <option value="">21h-23h</option>
                 </select>
             </div>
-            <div class="hang1">
+            <div class="hang2 hang1">
                 <button>A1</button>
                 <button>A2</button>
                 <button>A3</button>
@@ -168,7 +168,7 @@
                 <button>A8</button>
                 <button>A9</button>
             </div>
-            <div class="hang1">
+            <div class="hang1 hang2">
                 <button>B1</button>
                 <button>B2</button>
                 <button>B3</button>
@@ -179,7 +179,7 @@
                 <button>B8</button>
                 <button>B9</button>
             </div>
-            <div class="hang1">
+            <div class="hang1 hang2">
                 <button>C1</button>
                 <button>C2</button>
                 <button>C3</button>
@@ -190,7 +190,7 @@
                 <button>C8</button>
                 <button>C9</button>
             </div>
-            <div class="hang1">
+            <div class="hang1 hang2">
                 <button>D1</button>
                 <button>D2</button>
                 <button>D3</button>
@@ -201,7 +201,7 @@
                 <button>D8</button>
                 <button>D9</button>
             </div>
-            <div class="hang1">
+            <div class="hang1 hang2">
                 <button>E1</button>
                 <button>E2</button>
                 <button>E3</button>
@@ -212,7 +212,7 @@
                 <button>E8</button>
                 <button>E9</button>
             </div>
-            <div class="hang1">
+            <div class="hang1 hang2">
                 <button>F1</button>
                 <button>F2</button>
                 <button>F3</button>
