--- a/danhgiaphim.html
+++ b/danhgiaphim.html
@@ -225,8 +225,8 @@
                 <div class="foot-form">
                     <h3>Kết nối với chúng tôi</h3>
                     <div>
-                        <img src="img/icon-fb.png" alt="">
-                        <img src="img/icon-ytb.png" alt="">
+                        <a href="https://www.facebook.com/touchcinema"><img src="img/icon-fb.png" alt=""></a>
+                        <a href="https://www.youtube.com/@touchcinema3215"><img src="img/icon-ytb.png" alt=""></a>
                     </div>
                     <h3>Ứng dụng</h3>
                     <img src="img/app-ios.png" alt="">
