--- a/phim.html
+++ b/phim.html
@@ -30,11 +30,11 @@
 <div class="head">
     <div class="flex">
         <div class="img">
-            <img src="img/logo.png" alt="logo">
+            <a href="trang chủ.html"><img src="img/logo.png" alt="logo"></a>
         </div>
         <div class="tieude">
             <div class="tieude1 flex">
-                <img src="img/dat-ve-ngay.png" alt="hoạt họa">
+                <a href="datve.html"><img src="img/dat-ve-ngay.png" alt="hoạt họa"></a>
                 <div class="timkiem">
                     <input type="text" placeholder="Bạn tìm gì...">
                     <i class="fa-solid fa-magnifying-glass"></i>   
@@ -690,8 +690,10 @@
             </div>
         </div>
      </div>
+        <div class="bell"><i class="fa-solid fa-bell"></i><div class="bell-vong"></div><div class="bell1"></div></div>
 </nav>
 </div>
+
 <footer>
     <div class="foot">
         <div class="head flex">
@@ -705,7 +707,7 @@
             <div class="foot-form">
                 <h3>Kết nối với chúng tôi</h3>
                 <div>
-                    <img src="img/icon-fb.png" alt="">
+                    <a href="https://www.facebook.com/touchcinema/"><img src="img/icon-fb.png" alt=""></a>
                     <img src="img/icon-ytb.png" alt="">
                 </div>
                 <h3>Ứng dụng</h3>
