--- a/trang chủ.html
+++ b/trang chủ.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="img/icon-sap-chieu.png">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width:600px)">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
@@ -29,11 +30,11 @@
     <div class="head">
         <div class="flex">
             <div class="img">
-                <img src="img/logo.png" alt="logo">
+                <a href="trang chủ.html"><img src="img/logo.png" alt="logo"></a>
             </div>
             <div class="tieude">
                 <div class="tieude1 flex">
-                    <img src="img/dat-ve-ngay.png" alt="hoạt họa">
+                    <a href="datve.html"><img src="img/dat-ve-ngay.png" alt="hoạt họa"></a>
                     <div class="timkiem">
                         <input type="text" placeholder="Bạn tìm gì...">
                         <i class="fa-solid fa-magnifying-glass"></i>   
@@ -149,6 +150,88 @@
             <img src="img/bpic-poster-1920x1080.jpg" alt="">
         </div>
     </div>
+    <nav class="head">
+        <h1>DANH SÁCH PHIM</h1>
+        <div class="danhsachphim flex">
+            <div class="phimdangchieu flex">
+                <img src="img/icon-dat-ve.png" alt="">
+                <h2>PHIM ĐANG CHIẾU</h2>
+            </div>
+            <div class="phimsapchieu flex">
+                <h2>PHIM SẮP CHIẾU</h2>
+                <img src="img/icon-sap-chieu.png" alt="">
+            </div> 
+        </div>
+    </nav>
+    <nav class="head">
+        <div class="movies flex animate__animated animate__fadeIn">
+            <div class="movie">
+                <div class="movi">
+                    <img src="img/470x700-5-poster.png" alt="">
+                    <div class="chitiet flex animate__animated animate__flipInY">
+                        <div class="chitiet1">
+                            <p><strong>Thời gian</strong>:103 Phút</p>
+                            <p><strong>Thể loại</strong>:Hành động</p>
+                            <p><strong>Định dạng</strong>: 2D</p>
+                            <p><strong>Đánh giá</strong>:8.7/10<i class="fa-solid fa-star"></i></p>
+                        </div>
+                    </div>
+                    <h2><a href="#">Dealpool</a></h2>
+                    <button class="datve16">Đặt vé ngay</button>
+                    <p>Dự kiến khởi chiếu 16/09/2024</p> 
+                </div>
+            </div>
+            <div class="movie">
+                <div class="movi">
+                    <img src="img/bpic-poster-1200x1800-poster.jpg" alt="">
+                    <div class="chitiet flex animate__animated animate__flipInY">
+                        <div>
+                            <p><strong>Thời gian</strong>:93 Phút</p>
+                            <p><strong>Thể loại</strong>:Hòa nhạc</p>
+                            <p><strong>Định dạng</strong>: 2D</p>
+                            <p><strong>Đánh giá</strong>:9.7/10<i class="fa-solid fa-star"></i></p>
+                        </div>
+                    </div>
+                    <h2><a href="#">Born Pink</a></h2>
+                    <button class="datve1">Đặt vé ngay</button>
+                    <p>Dự kiến khởi chiếu 16/08/2024</p> 
+                </div>
+            </div>
+            <div class="movie">
+                <div class="movi">
+                    <img src="img/captain-america-teaserdebut-1sht-vie-poster.jpg" alt="">
+                    <div class="chitiet flex animate__animated animate__flipInY">
+                        <div>
+                            <p><strong>Thời gian</strong>:81 Phút</p>
+                            <p><strong>Thể loại</strong>:Hành động</p>
+                            <p><strong>Định dạng</strong>: 2D</p>
+                            <p><strong>Đánh giá</strong>:8.8/10<i class="fa-solid fa-star"></i></p>
+                        </div>
+                    </div>
+                    <h2><a href="#">Captain america</a></h2>
+                    <button class="datve1">Đặt vé ngay</button>
+                    <p>Dự kiến khởi chiếu 20/08/2024</p> 
+                </div>
+            </div>
+            <div class="movie">
+                <div class="movi">
+                    <img src="img/poster-payoff-trap-poster.jpg" alt="">
+                    <div class="chitiet flex animate__animated animate__flipInY">
+                        <div>
+                            <p><strong>Thời gian</strong>:80 Phút</p>
+                            <p><strong>Thể loại</strong>:Hành động</p>
+                            <p><strong>Định dạng</strong>: 2D</p>
+                            <p><strong>Đánh giá</strong>:8.7/10<i class="fa-solid fa-star"></i></p>
+                        </div>
+                    </div>
+                    <h2><a href="#">Bẫy</a></h2>
+                    <button class="datve1">Đặt vé ngay</button>
+                    <p>Dự kiến khởi chiếu 30/09/2024</p> 
+                </div>
+            </div>
+        </div>
+    </div>
+    </nav>
     <footer>
         <div class="foot">
             <div class="head flex">
