--- a/giave.html
+++ b/giave.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="img/icon-sap-chieu.png">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width:600px)">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
@@ -29,11 +30,11 @@
     <div class="head">
         <div class="flex">
             <div class="img">
-                <img src="img/logo.png" alt="logo">
+                <a href="trang chủ.html"><img src="img/logo.png" alt="logo"></a>
             </div>
             <div class="tieude">
                 <div class="tieude1 flex">
-                    <img src="img/dat-ve-ngay.png" alt="hoạt họa">
+                    <a href="datve.html"><img src="img/dat-ve-ngay.png" alt="hoạt họa"></a>
                     <div class="timkiem">
                         <input type="text" placeholder="Bạn tìm gì...">
                         <i class="fa-solid fa-magnifying-glass"></i>   
